# dpa_automations

./: .gitignore  .pre-commit-config.yaml  README.md
gsheet_to_mailchimp_volunteers/: makefile  setup.cfg  setup.py
gsheet_to_mailchimp_volunteers/gsheet_to_mailchimp_volunteers/: constants.py  gsheet_to_mailchimp_volunteers.py
gsheet_to_mailchimp_volunteers/infrastructure/: main.tf
jotform_alerts/foster_agreement_webhook/: pyproject.toml  webhook.py
jotform_alerts/infrastructure/: foster_agreement.tf  main.tf
new_digs_to_rescue_groups/: makefile  setup.cfg  setup.py
new_digs_to_rescue_groups/infrastructure/: main.tf
new_digs_to_rescue_groups/new_digs_to_rescue_groups/: new_digs_to_rescue_groups.py
new_digs_to_rescue_groups/new_digs_to_rescue_groups/tests/: test_new_digs_to_rescue_groups.py
petfinder_sync/: makefile  setup.cfg  setup.py
petfinder_sync/.github/workflows/: petfinder_sync.yml
petfinder_sync/backend/: petfinder_sync.py  run.py
petfinder_sync/backend/tests/: test_petfinder_sync.py
petfinder_sync/infrastructure/: main.tf
petfinder_sync/petfinder_sync/: constants.py  petfinder_sync.py
petfinder_sync/petfinder_sync/tests/: test_petfinder_sync.py
sync_to_rescue_groups/: pyproject.toml  setup.cfg  setup.py
sync_to_rescue_groups/infrastructure/: main.tf  zip_packages.sh
sync_to_rescue_groups/sync_to_rescue_groups/: sync_to_rescue_groups.py
sync_to_rescue_groups/sync_to_rescue_groups/tests/: test_sync_to_rescue_groups.py
wordpress_pet_sync/: makefile  pyproject.toml  setup.cfg  setup.py
wordpress_pet_sync/infrastructure/: dynamodb.tf  main.tf
wordpress_pet_sync/wordpress_pet_sync/: wordpress_pet_sync.py
wordpress_pet_sync/wordpress_pet_sync/tests/: test_wordpress_pet_sync.py
