[metadata]
name = gsheet_to_mailchimp_volunteers
version = 0.0.1

[options]
install_requires =
    requests

[tool:pytest]
minversion = 6.0
addopts = --cov --cov-fail-under=90
testpaths =
    gsheet_to_mailchimp_volunteers/tests

[coverage:run]
branch = True
omit =
    gsheet_to_mailchimp_volunteers/tests/*
    *__init__.py
