[metadata]
name = new_digs_to_rescue_groups
version = 0.0.1

[options]
install_requires =
    requests

[tool:pytest]
minversion = 6.0
addopts = --cov --cov-fail-under=90
testpaths =
    new_digs_to_rescue_groups/tests

[coverage:run]
branch = True
omit =
    new_digs_to_rescue_groups/tests/*
    *__init__.py
