[metadata]
name = petfinder_sync
version = 0.0.1

[options]
install_requires =
    requests

[tool:pytest]
minversion = 6.0
addopts = --cov --cov-fail-under=30 --cov-report term-missing
testpaths =
    petfinder_sync/tests

[coverage:run]
branch = True
omit =
    petfinder_sync/tests/*
    *__init__.py
