[metadata]
name = wordpress_pet_sync
version = 0.0.1

[options]
install_requires =
    requests

[tool:pytest]
minversion = 6.0
addopts = --cov --cov-fail-under=80 --cov-report term-missing
testpaths =
    wordpress_pet_sync/tests

[coverage:run]
branch = True
omit =
    wordpress_pet_sync/tests/*
    *__init__.py
